--- a/addons/l10n_tr_nilvera/views/res_partner_views.xml
+++ b/addons/l10n_tr_nilvera/views/res_partner_views.xml
@@ -2,7 +2,7 @@
     <record id="view_partner_property_form_inherit_ubl_tr" model="ir.ui.view">
         <field name="name">res.partner.property.form.inherit.ubl.tr</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="account_edi_ubl_cii.view_partner_property_form"/>
+        <field name="inherit_id" ref="account.view_partner_property_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_edi_format']" position="after">
                 <label for="l10n_tr_nilvera_customer_status" invisible="invoice_edi_format != 'ubl_tr'"/>
