[IMP] l10n_id_efaktur_coretax: no default tku
Avoid setting a default TKU on all partner records,
and instead leave empty with a fallback when used in
the code.

closes odoo/odoo#225283

Related: odoo/upgrade#8362
Signed-off-by: William André (wan) <wan@odoo.com>

--- a/addons/l10n_id_efaktur_coretax/views/res_partner.xml
+++ b/addons/l10n_id_efaktur_coretax/views/res_partner.xml
@@ -13,7 +13,7 @@
                 <group string="Indonesian Taxes"  invisible="not l10n_id_pkp">
                     <group>
                         <field name="l10n_id_nik"/>
-                        <field name="l10n_id_tku"/>
+                        <field name="l10n_id_tku" placeholder="000000"/>
                         <label for="l10n_id_buyer_document_type" string="Document Type"/>
                         <div class="d-flex gap-2">
                             <field name="l10n_id_buyer_document_type" />
