[IMP] calendar: improve description
Purpose
=======
Improve the description field to make sure people have direct access
to more event info from external calendars and the calendar popover.

Specification
=============
Add organizer and first contact partner details with direct email and phone actions.
These details are added in the create method before record creation because
updating the description after creation triggers a second sync with external calendars.

Using the 'skip_contact_description' context key to prevent adding those details
in certain scenarios to avoid duplication as the description already contains the details:
- when copying the event
- when creating recurrent events
- when syncing from external calendars to odoo

Task-4759201

--- a/addons/calendar/static/src/scss/calendar.scss
+++ b/addons/calendar/static/src/scss/calendar.scss
@@ -16,6 +16,15 @@
     padding-top: 0px !important;
 }
 
+.o_cw_body li:has(.o_field_html[name="description"]){
+    span:has(i) {
+        align-self: flex-start;
+    }
+    .o_field_html {
+        text-wrap: wrap;
+    }
+}
+
 .o_field_many2manyattendeeexpandable .o_field_tags {
     flex-direction: column;
 
