--- a/addons/account/views/mail_message_views.xml
+++ b/addons/account/views/mail_message_views.xml
@@ -72,5 +72,5 @@
         <field name="search_view_id" ref="view_message_tree_audit_log_search"/>
     </record>
 
-    <menuitem id="account_audit_trail_menu" name="Audit Trail" action="action_account_audit_trail_report" parent="account.account_reports_management_menu"/>
+    <menuitem id="account_audit_trail_menu" name="Audit Trail" action="action_account_audit_trail_report" parent="account.account_logs_menu"/>
 </odoo>
