[IMP] website_slides: review homepage sidebar design
This commit applies the following changes to the homepage sidebar:

- Review the hierarchy of the content (typescale, headings tag, ...)

- Fine-tune the spacing and gap between section

- Switch to an offcanvas on Mobile

- Remove some unneeded and enforced styling

task-4176339
part of task-3638127

--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -167,6 +167,10 @@ $line-height-truncate: 1.5em;
         min-height: 1px;
     }
 
+    .o_wslides_home_aside {
+        --Avatar-size: 35px;
+    }
+
 }
 
 .o_wslides_channel_completion_completed {
